# GraphicEngine

./: CMakeLists.txt  LICENSE  README.md  xml_syntax.xml
bezier_info/: README.md
examples/: solar_system.xml
examples/models/: bezier_nt.3d  bezier_nt.3d.tex  sphere_nt.3d  sphere_nt.3d.tex  torus_nt.3d  torus_nt.3d.tex
src/engine/: CMakeLists.txt  camera.cpp  camera.hpp  catmull_rom.cpp  catmull_rom.hpp  color.cpp  color.hpp  group.cpp  group.hpp  light.cpp  light.hpp  main.cpp  model.cpp  model.hpp  parsing.cpp  parsing.hpp
src/engine/transformations/: rotation.cpp  rotation.hpp  scale.cpp  scale.hpp  translation.cpp  translation.hpp
src/generator/: CMakeLists.txt  bezierpatches.cpp  bezierpatches.hpp  box.cpp  box.hpp  cone.cpp  cone.hpp  main.cpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp  torus.cpp  torus.hpp
src/solar_script/: camera.py  element.py  gen_elements_xml.py  lights.py  main.py  orbit.py  solar_system.xml  transformations.py
src/utils/: CMakeLists.txt  cylindrical_coord.cpp  cylindrical_coord.hpp  point.cpp  point.hpp  point2D.cpp  point2D.hpp  spherical_coord.cpp  spherical_coord.hpp  vector.cpp  vector.hpp
